<resources>
    <string name="app_name">Voluntutor</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login_page">LoginPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="log_out">log out</string>

    <string name="send_message">Message</string>
    <string name="type_message">Type New Message</string>
    <string name="send_new_message">Send New Message</string>
    <string name="button">Button</string>
    <string name="starimage">starImage</string>

    <string name="title">title</string>
    <string name="description">description</string>
    <string name="todo">TODO</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="sign_up">sign up</string>
    <string name="sign_me_up_as_a_tutor">Sign me up as a tutor!</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="login">LOGIN</string>
    <string name="already_have_an_account">Already Have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="title_activity_firebase_login">FirebaseLoginActivity</string>
    <string name="loading">loading...</string>
    <!-- Strings used for fragments for navigation -->


    <string-array name="program_lang">
        <item>c++</item>
        <item>c#</item>
        <item>java</item>
        <item>python</item>
        <item>javascript</item>
        <item>kotlin</item>
        <item>ruby</item>
        <item>swift</item>
        <item>typeScript</item>
        <item>visual studio</item>
    </string-array>

    <string-array name="description">
        <item>This is random description.</item>
        <item>This is random description.</item>
        <item>This is random description.</item>
        <item>This is random description.</item>
        <item>This is random description.</item>
        <item>This is random description.</item>
        <item>This is random description.</item>
        <item>This is random description.</item>
        <item>This is random description.</item>
        <item>This is random description.</item>
    </string-array>

    <string-array name="fruits_array">
        <item>Apple</item>
        <item>Banana</item>
        <item>Cherry</item>
        <item>Durian</item>
        <item>Eggplant</item>
        <item>Fruit</item>
        <item>Grape</item>
        <item>Hotdog</item>
        <item>Icecream</item>
        <item>Jackfruit</item>
        <item>Krispy Apple</item>
        <item>Lemon</item>
        <item>Melon</item>
        <item>Nougat</item>
        <item>Orange</item>
        <item>Pineapple</item>
        <item>Quack</item>
        <item>Raisin</item>
        <item>Strawberry</item>
        <item>Tomato</item>
        <item>Unami</item>
        <item>Very yummy</item>
        <item>Watermelon</item>
        <item>Xray</item>
        <item>Yoyo</item>
        <item>Zebra</item>
    </string-array>


</resources>