<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/login_here"
        android:textColor="@color/purple_1"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:maxLines="1"
        android:layout_marginTop="20dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:maxLines="1"
        android:importantForAutofill="no"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/login"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/NotAUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            app:autoSizeMaxTextSize="30dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:id="@+id/registerNow"
            android:text="@string/register_now"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>