<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/sign_up_here"
        android:textColor="@color/purple_1"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signUpFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:maxLines="1"
        android:layout_marginTop="20dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/signUpLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:minHeight="48dp"
        android:inputType="text"
        android:textColorHint="#757575"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:maxLines="1"
        android:importantForAutofill="no"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="Courses"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:importantForAutofill="no"
        />
    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:importantForAutofill="no" />


    <CheckBox
        android:id="@+id/signUpTutor"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/sign_me_up_as_a_tutor" />
    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="Price (tutor only)"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/sign_up" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:id="@+id/loginNow"
            android:text="@string/login_here"
            android:textStyle="bold"/>
    </LinearLayout>

    </LinearLayout>
